@@ -6,6 +6,7 @@ Unreleased
 ----------
 ! Dropped QA for Django 1.7.
 ! Dropped QA for Python 2.
++ Add Django 3.0 compatibility.
 
 
 v1.0.0
